@@ -13,3 +13,9 @@ SELECT TRANSLATE('Hanauma Bay', 'r', 'Bu') FROM SYSIBM.SYSDUMMY1;
 -- HEX()
 SELECT HEX('000020') FROM SYSIBM.SYSDUMMY1;
 SELECT HEX(000020) FROM SYSIBM.SYSDUMMY1; -- WRONG
+
+--  UPPER(text, text)
+SELECT UPPER('Müller', 'de_DE') FROM SYSIBM.SYSDUMMY1;
+
+-- LOWER(text, text)
+SELECT LOWER('MÜLLER', 'de_DE') FROM SYSIBM.SYSDUMMY1;
